<resources>
    <string name="app_name">File TP</string>
    <string name="title_menu_send">发送</string>
    <string name="title_menu_select_all">全选</string>
    <string name="title_menu_setting">设置</string>
    <string name="title_tv_hide_file">不显示隐藏文件</string>
    <string name="title_tv_show_file">显示隐藏文件</string>
    <string name="title_btn_show_credible_list">显示可信设备名称列表</string>
    <string name="string_ok">确定</string>
    <string name="string_cancel">取消</string>
    <string name="title_menu_save">保存</string>
    <string name="title_menu_clear">清除</string>
    <string name="title_menu_add">添加</string>
    <string name="title_menu_cancel">取消</string>
</resources>
