<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_set_local_device_name"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/distance_setting_toTop"
                android:layout_marginStart="@dimen/distance_setting_toSide"
                android:layout_marginEnd="@dimen/distance_setting_toSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_set_begin_port"
                android:layout_marginTop="@dimen/distance_setting_toTop"
                android:layout_marginStart="@dimen/distance_setting_toSide"
                android:layout_marginEnd="@dimen/distance_setting_toSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_marginTop="@dimen/distance_setting_toTop"
                android:layout_marginStart="@dimen/distance_setting_toSide"
                android:layout_marginEnd="@dimen/distance_setting_toSide"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_switch_left"
                    android:text="@string/title_tv_hide_file"
                    android:textColor="@color/color_black"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Switch
                    android:id="@+id/switch_show_hide_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/label_switch_right"
                    android:text="@string/title_tv_show_file"
                    android:textColor="@color/color_black"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_set_thread_number"
                android:layout_marginTop="@dimen/distance_setting_toTop"
                android:layout_marginStart="@dimen/distance_setting_toSide"
                android:layout_marginEnd="@dimen/distance_setting_toSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_show_save_path"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/distance_setting_toTop"
                android:layout_marginStart="@dimen/distance_setting_toSide"
                android:layout_marginEnd="@dimen/distance_setting_toSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_show_credible_list"
                android:text="@string/title_btn_show_credible_list"
                android:layout_marginTop="@dimen/distance_setting_toTop"
                android:layout_marginStart="@dimen/distance_setting_toSide"
                android:layout_marginEnd="@dimen/distance_setting_toSide"
                android:layout_marginBottom="@dimen/distance_setting_toTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>